--- a/quiz1.html
+++ b/quiz1.html
@@ -10,7 +10,7 @@
     <!-- <link rel="FAV-Icon" href="on.jpg" type="img/jpg"> -->
     <img style="width:280px ;" src="https://dkstatics-public.digikala.com/digikala-products/237c3ed04b4a7480e0920d8bb0cb5aa0385913e8_1656430872.jpg?x-oss-process=image/resize,m_lfit,h_800,w_800/format,webp/quality,q_90" alt="">
 <div style="width: 380px; ;">
-    <h2>گوشی موبایل   سامسونگ مدل Galaxy S22 5G دو سیم کارت ظرفیت 256 گیگابایت و رم 8 گیگابایت</h2>
+    <h2>گوشی موبایل . سامسونگ مدل Galaxy S22 5G دو سیم کارت ظرفیت 256 گیگابایت و رم 8 گیگابایت</h2>
 </div>
 <div>
     <p>سامسونگ Galaxy S22 5G به عنوان کوچکترین عضو گوشی‌های هوشمند خانواده Galaxy S22 معرفی شد و به نسبت دو گوشی هوشمند دیگر این خانواده، قیمت مقرون به‌صرفه‌تری هم دارد.</p>
